--- a/src/main/java/com/ambi/formula/gui/swing/windows/OptionsWindow.form
+++ b/src/main/java/com/ambi/formula/gui/swing/windows/OptionsWindow.form
@@ -129,8 +129,8 @@
         </Component>
         <Component class="javax.swing.JSpinner" name="gridSpinner">
           <Properties>
-            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-              <SpinnerModel initial="15" maximum="35" minimum="10" numberType="java.lang.Integer" stepSize="1" type="number"/>
+            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new javax.swing.SpinnerNumberModel(this.model.gridSize(), 10, 35, 1)" type="code"/>
             </Property>
           </Properties>
           <Events>
@@ -161,29 +161,23 @@
         </Component>
         <Component class="javax.swing.JSpinner" name="paperHeight">
           <Properties>
-            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-              <SpinnerModel initial="40" minimum="30" numberType="java.lang.Integer" stepSize="10" type="number"/>
+            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new javax.swing.SpinnerNumberModel(this.model.getPaperHeight(), 30, null, 10)" type="code"/>
             </Property>
           </Properties>
           <Events>
             <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="paperHeightStateChanged"/>
           </Events>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="model.setPaperHeight(((Number)paperHeight.getValue()).intValue());"/>
-          </AuxValues>
         </Component>
         <Component class="javax.swing.JSpinner" name="paperWidth">
           <Properties>
-            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-              <SpinnerModel initial="80" minimum="30" numberType="java.lang.Integer" stepSize="10" type="number"/>
+            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new javax.swing.SpinnerNumberModel(this.model.getPaperWidth(), 30, null, 10)" type="code"/>
             </Property>
           </Properties>
           <Events>
             <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="paperWidthStateChanged"/>
           </Events>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="model.setPaperWidth(((Number)paperWidth.getValue()).intValue());"/>
-          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
@@ -260,7 +254,7 @@
         <Component class="javax.swing.JComboBox" name="comboTurns">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;4&quot;, &quot;5&quot;, &quot;9&quot; })" type="code"/>
+              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new Integer[] {MakeTurn.FOUR_TURNS, MakeTurn.FIVE_TURNS, MakeTurn.NINE_TURNS})" type="code"/>
             </Property>
           </Properties>
           <Events>
@@ -268,12 +262,14 @@
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox&lt;&gt;()"/>
-            <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="comboTurns.setSelectedIndex(0);"/>
+            <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="comboTurns.setSelectedItem(model.getTurn().getTurnsCount());"/>
           </AuxValues>
         </Component>
         <Component class="javax.swing.JRadioButton" name="firstWins">
           <Properties>
-            <Property name="selected" type="boolean" value="true"/>
+            <Property name="selected" type="boolean" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="}">
+              <Connection code="true" type="code"/>
+            </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection code="optionLabels.getValue(OptionsLabels.RULE_FIRST)" type="code"/>
             </Property>
@@ -281,6 +277,9 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="firstWinsActionPerformed"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="if (model.getTurn().getFinishType() == MakeTurn.FIRST_WIN) {"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JRadioButton" name="roundEnd">
           <Properties>
@@ -291,6 +290,9 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="roundEndActionPerformed"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="if (model.getTurn().getFinishType() == MakeTurn.SECOND_CHANCE) {&#xa;roundEnd.setSelected(true);&#xa;}"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JRadioButton" name="collision">
           <Properties>
@@ -301,6 +303,9 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="collisionActionPerformed"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="if (model.getTurn().getFinishType() == MakeTurn.COLLISION) {&#xa;collision.setSelected(true);&#xa;}"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
@@ -479,23 +484,16 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="showTurns">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="3"/>
-                <StringItem index="1" value="5"/>
-                <StringItem index="2" value="10"/>
-                <StringItem index="3" value="20"/>
-                <StringItem index="4" value="MAX"/>
-              </StringArray>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new javax.swing.DefaultComboBoxModel(new Integer[] {MakeTurn.LENGTH_3, MakeTurn.LENGTH_5, MakeTurn.LENGTH_10, MakeTurn.LENGTH_20, MakeTurn.LENGTH_MAX})" type="code"/>
             </Property>
-            <Property name="selectedIndex" type="int" value="4"/>
+            <Property name="selectedItem" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="this.model.getTurn().getLengthHist()" type="code"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="showTurnsItemStateChanged"/>
           </Events>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="model.getTurn().getFormula(1).setLengthHist(showTurns.getSelectedItem());&#xa;model.getTurn().getFormula(2).setLengthHist(showTurns.getSelectedItem());"/>
-          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
